Increased the memory size of the local foreman startup, took out the admin war from starting up on heroku deploy