@@ -17,7 +17,7 @@ cp ./site/heroku-server.xml $CATALINA_BASE/conf/server.xml
 chmod a+x ./site/target/cargo/installs/apache-tomcat-7.0.29/apache-tomcat-7.0.29/bin/*.sh
 
 #set the correct port and database settings
-JAVA_OPTS="$JAVA_OPTS -Xmx512m -Xms512m -Dhttp.port=8080 -DDATABASE_URL=postgres://postgres:password@localhost/postgres/broadleaf"
+JAVA_OPTS="$JAVA_OPTS -XX:MaxPermSize=512M -Xmx768m -Xms768m -Dhttp.port=8080 -DDATABASE_URL=postgres://postgres:password@localhost/postgres/broadleaf"
 export JAVA_OPTS
 
 #start Tomcat
